--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -9,3 +9,10 @@
 <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
 <link rel="manifest" href="/assets/site.webmanifest">
+
+<head>
+  <meta name="theme-color" content="#ffffff"
+   media="(prefers-color-scheme: light)">
+  <meta name="theme-color" content="#000000"
+   media="(prefers-color-scheme: dark)">
+</head>
