updated welcome page

--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -13,6 +13,6 @@
 <head>
   <meta name="theme-color" content="#ffffff"
    media="(prefers-color-scheme: light)">
-  <meta name="theme-color" content="#000000"
+  <meta name="theme-color" content="#333a3e"
    media="(prefers-color-scheme: dark)">
 </head>
