--- a/assets/css/slider.css
+++ b/assets/css/slider.css
@@ -2,12 +2,6 @@
     /*     box-sizing: border-box; */
     }
     
-    .container-slider {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-    
     .slider {
         display: block;
         position: relative;
@@ -49,8 +43,8 @@
     
     .slider__nav-button {
         position: absolute;
-        height: 70px;
-        width: 70px;
+        height: 20%;
+        width: 15%;
         background-color: #333;
         opacity: .8;
         cursor: pointer;
@@ -102,8 +96,8 @@
     
     .slider__navlink {
         display: inline-block;
-        height: 20px;
-        width: 20px;
+        height: 10px;
+        width: 10px;
         border-radius: 50%;
         border: 1px #fff solid;
         background-color: #333;
