--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,7 +17,7 @@ layout: default
     {%- if page.author -%}
       <span> • </span>
       {% for author in page.author %}
-        <span itemprop="author" itemscope itemtype="http://schema.org/Person">
+        <span itemprop="author" itemscope itemtype="https://schema.org/Person">
           {{ author }}
         </span>
         {%- if forloop.last == false %}, {% endif -%}
