Responsive layout changes

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -68,6 +68,9 @@ footer {
   .content {
     width: 100%;
   }
+  .sidebar-left {
+    height: 75vh;
+  }
 }
 
 @media (min-width: $md-width) and (max-width: $lg-width) {
